--- a/app/views/application/_cart-link.html.erb
+++ b/app/views/application/_cart-link.html.erb
@@ -1,5 +1,5 @@
 <%= link_to cart_index_path do %>
-  <%= button_tag('AJOUTER AU PANIER', class:  'card__add') do %>
-    <div class="card__add--added">VOIR LE PANIER</div>
+  <%= button_tag('VOIR LE PANIER', class:  'card__add') do %>
+    <div class="card__add--cart">VOIR LE PANIER</div>
   <% end %>
 <% end %>
