--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -56,3 +56,23 @@
     padding: 2em 1em;
   }
 }
+
+.index_cards__link{
+  font-size: 2.5em;
+  text-align: center;
+
+  margin: 2em auto;
+
+  a {
+  color: blue;
+  }
+}
+/*--------------
+DESKTOP
+--------------*/
+
+@media only screen and (min-device-width: 480px){
+  .index_cards__link{
+    font-size:1em;
+  }
+}
