--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div id="main">
   <div class="main-title">
-    <h2><%= link_to "THRIFT", root_path%></h2>
+    <h2 class="main-title__mobile"><%= link_to "THRIFT", root_path%></h2>
     <em class="main-title__desc">Magasin d'habits de seconde-main eco-friendly.</em>
   </div>
   <div class="main-title">
