--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -68,6 +68,12 @@
   font-size: 2.5em;
 }
 
+@media only screen and (min-device-width: 480px){
+  #no-item{
+    font-size:1.5em;
+  }
+}
+
 .cart_nextBtn{
   font-size: 3em;
   padding: 0.5em;
