--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,14 @@
 <div id="main">
-  <%= render(partial: 'item_card--show',
-            locals: {card_title: @item.title, price: @item.price, photo_url: @item.photo_url, item: @item})%>
+  <div class="main--show">
+    <%= render(partial: 'item_card--show',
+              locals: {card_title: @item.title, price: @item.price, photo_url: @item.photo_url, item: @item})%>
+    <div class="card--show__desc">
+      <%= @item.description%>
+      <div class="card--show__return">
+        <%=link_to "Retour", items_path%>
+      </div>
+    </div>
+  </div>
 </div>
 
 
@@ -14,8 +22,6 @@
 
 
  buttons = document.getElementsByClassName("card__add");
-
- console.log(buttons)
 
  for(let i=0; i< buttons.length; i++){
 
