--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -68,11 +68,7 @@
   font-size: 2.5em;
 }
 
-@media only screen and (min-device-width: 480px){
-  #no-item{
-    font-size:1.5em;
-  }
-}
+
 
 .cart_nextBtn{
   font-size: 3em;
@@ -94,4 +90,46 @@
 
 .hr__next{
   margin:2em 0;
+}
+
+@media only screen and (min-device-width: 480px){
+  #no-item{
+    font-size:1.5em;
+  }
+
+  .all_cart{
+    h4{
+      font-size:1.2em;
+    }
+  }
+
+  .remove-form{
+    width:auto;
+    button{
+      font-size:0.4em;
+    }
+  }
+
+  #all-items{
+    margin: 1em auto;
+  }
+
+  .hr__next{
+    display:none;
+  }
+
+  .cart_nextBtn{
+    font-size: 1em;
+  }
+
+  .all-items--one{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .cart_nextBtnRow{
+    margin:0 auto;
+  }
+
 }
