--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -2,8 +2,8 @@
   <nav class= "nav-header">
     <div class="logo"><%= link_to "Thriftshop", root_path%></div>
     <ul class="nav-links">
-      <li><%= link_to "Clothes", items_path%></li>
-      <li><%= link_to "Cart", cart_index_path %></li>
+      <li><%= link_to "Habits", items_path%></li>
+      <li><%= link_to "Panier", cart_index_path %></li>
     </ul>
   </nav>
   <hr>
