--- a/app/views/cart/addressAJAX.js.erb
+++ b/app/views/cart/addressAJAX.js.erb
@@ -44,7 +44,7 @@ if(firstname.length == 0 || firstname.length > 30){
 }
 
 if(mailformat.test(email) == false){
-  addError("Votre addresse e-mail semble ne pas avoir le bon format.");
+  addError("Votre adresse e-mail semble ne pas avoir le bon format.");
 }
 
 if(street.length == 0 || street.length > 30){
