--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -44,3 +44,23 @@
 .input__submit.input__submit--nomargin{
   margin: 0;
 }
+
+@media only screen and (min-device-width: 480px){
+  .form_new_model{
+    width:50%;
+    margin: 2em auto;
+  }
+
+  .form_new_model .input{
+    padding:0.3em 0;
+  }
+
+  .input-group__label{
+    font-size:0.6em;
+  }
+
+  .input__text {
+    height:30px;
+    font-size:0.5em;
+  }
+}
