--- a/app/views/cart/address.html.erb
+++ b/app/views/cart/address.html.erb
@@ -1,4 +1,4 @@
-<div id="main">
+<div id="main--content">
   <div class="main-title">
     <h2><%= link_to "THRIFT", root_path%></h2>
     <em class="main-title__desc">Magasin d'habits de seconde-main eco-friendly.</em>
@@ -8,7 +8,7 @@
     <%= render(partial: 'mobile-header')%>
   </div>
 
-  <h2 id="address_title" class="form--title">Informations de livraison</h2>
+  <h2 id="address_title" class="form--title">Informations de livraison/facturation</h2>
   <div class="address_warning">
     <em>Livraisons uniquement en Suisse.</em>
   </div>
