--- a/app/views/cart/payment.html.erb
+++ b/app/views/cart/payment.html.erb
@@ -36,7 +36,7 @@
 
     </div>
     <h4 class="payment__title--livraison">
-      Informations de livraison:
+      Informations de livraison/facturation:
     </h4>
     <div id="payment__customer">
     </div>
