--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
   <div class="footer__links">
-    <a href="#">Conditions d'utilisation</a>
+    <%= link_to "Contact", contact_path %>
   </div>
 </footer>
