--- a/app/views/cart/confirmation.html.erb
+++ b/app/views/cart/confirmation.html.erb
@@ -6,7 +6,13 @@
   <%= render(partial: 'mobile-header')%>
 </div>
 
-<div class="payment__confirmation">Merci de votre achat</div>
+<div class="payment__confirmation">
+  Merci de votre achat!
+  <div>
+    Un email de confirmation vous parviendra dans les prochaines minutes.
+  </div>
+</div>
+
 
 <script type="text/javascript">
   localStorage.setItem('cart', '');
