--- a/app/assets/stylesheets/payment.scss
+++ b/app/assets/stylesheets/payment.scss
@@ -10,20 +10,24 @@
   padding: 2em 0;
 }
 
-.payment__title{
-  font-size: 3em;
-  margin-bottom:0;
-}
-
 .payment__title--livraison{
   font-size: 3em;
   margin-bottom:0;
 }
 
-.payment__twint{
-  padding: 2em;
+.payment__info{
+  padding: 1em;
+  margin: 2em 0 0 0;
+  padding: 1em;
+}
 
-  margin: 4em 0;
+.payment_info--bank{
+  margin: 2em 0;
+  background-color: #E2E2E2;
+  border-radius: 10px;
+  padding-left:2em;
+
+  text-align:left;
 }
 
 
@@ -52,7 +56,7 @@
   font-size: 3em;
 
   text-align: center;
-  margin:2em auto 29em;
+  margin:2em auto 32em;
 }
 
 @media only screen and (min-device-width: 480px){
