--- a/app/views/cart/payment.html.erb
+++ b/app/views/cart/payment.html.erb
@@ -32,11 +32,11 @@
            </div>
          </div>
         <% end %>
-      </div>
 
+      </div>
     </div>
     <div class="payment__info">
-      Le paiement se fait par virement bancaire au compte suivant: <br />
+      Dès réception du montant sur le compte bancaire suivant, la livraison sera effectuée dans les 5 jours.<br />
       <div class="payment_info--bank">
         <br />
         MAS BEAUCLERCQ MAEVANE<br/>
@@ -132,7 +132,7 @@
 
 
   totalText = document.createElement("div");
-  totalTextText = document.createTextNode("Total");
+  totalTextText = document.createTextNode("Total (frais de livraison inclus)");
   totalText.appendChild(totalTextText);
 
   totalPrice = document.createElement("div");
