--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -10,6 +10,8 @@
       .email-image{
         text-align:center;
         padding: 2em 0;
+        height:80%;
+        width:80%;
       }
 
       .email-title{
@@ -21,8 +23,17 @@
       }
 
       .email-text{
-        font-size: 1.2em;
         margin: 2em 0;
+      }
+
+
+      .email_payment--bank{
+        margin: 2em 0;
+        background-color: #E2E2E2;
+        border-radius: 10px;
+        padding-left:2em;
+
+        text-align:left;
       }
 
       .email-bottom{
