--- a/app/views/application/_item_card--show.html.erb
+++ b/app/views/application/_item_card--show.html.erb
@@ -10,8 +10,18 @@
 
     <div class="card--show__card">
       <%= link_to(item_path(item)) do %>
-        <%= render(partial: 'item_photo',
-                   locals: {photo_url: photo_url}) %>
+        <div class="slidingImg">
+          <%= render(partial: 'item_photo',
+                     locals: {photo_url: photo_url}) %>
+        </div>
+        <div class="slidingImg">
+          <%= render(partial: 'item_photo',
+                     locals: {photo_url: "unavailable.jpg"}) %>
+        </div>
+        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+
+
         <div class="card__intro">
           <h4 class="card__title"><%= card_title %> // <span class="card__price"><%= price %> CHF</span></h4>
         </div>
@@ -25,3 +35,28 @@
     <%= link_to "Retour", items_path %>
   </div>
 </div>
+
+<%= javascript_tag do %>
+
+  //carousel display
+  console.log("STARTING THE SCRIPT");
+  var slideIndex = 1;
+  showDivs(slideIndex);
+
+  function plusDivs(n) {
+    showDivs(slideIndex += n);
+  }
+
+  function showDivs(n) {
+    console.log(slideIndex);
+    console.log("In showDivs");
+    var i;
+    var x = document.getElementsByClassName("slidingImg");
+    if (n > x.length) {slideIndex = 1}
+    if (n < 1) {slideIndex = x.length}
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";
+    }
+    x[slideIndex-1].style.display = "block";
+  }
+<% end %>
