--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -11,8 +11,10 @@
   </div>
 </div>
 
-
 <script type="text/javascript">
+
+ //Cart configuration javascript
+
  cart=[];
  if(localStorage.getItem('cart').length > 0){
    cart = localStorage.getItem('cart');
