--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -18,6 +18,18 @@
       <%= form.text_field(:photo_url, class: 'input__text') %>
     </div>
     <div class="input">
+      <%= form.label(:photo_url, class: 'input__label') %>
+      <%= form.text_field(:photo_url2, class: 'input__text') %>
+    </div>
+    <div class="input">
+      <%= form.label(:photo_url, class: 'input__label') %>
+      <%= form.text_field(:photo_url3, class: 'input__text') %>
+    </div>
+    <div class="input">
+      <%= form.label(:size, class: 'input__label') %>
+      <%= form.text_field(:size, class: 'input__text') %>
+    </div>
+    <div class="input">
       <%= form.label(:description, class: 'input__label') %>
       <%= form.text_area(:description, class: 'input__text_area') %>
     </div>
