--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,9 +1,8 @@
 <div id="main">
   <div class="main--show">
     <%= render(partial: 'item_card--show',
-              locals: {card_title: @item.title, price: @item.price, photo_url: @item.photo_url, item: @item})%>
+              locals: {card_title: @item.title, price: @item.price, photo_url: @item.photo_url, photo_url2: @item.photo_url2,photo_url3: @item.photo_url3, size: @item.size, item: @item})%>
     <div class="card--show__desc">
-      <%= @item.description%>
       <div class="card--show__return">
         <%=link_to "Retour", items_path%>
       </div>
