--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -67,6 +67,12 @@
   }
 }
 
+.home--mission{
+  font-size: 3em;
+  text-align: center;
+  padding: 0 1em;
+}
+
 /*--------------
   DESKTOP LAYOUT
   --------------*/
@@ -83,6 +89,10 @@
 
 
   .main-title{
+    display:none;
+  }
+
+  .home--mission{
     display:none;
   }
 
