--- a/app/views/application/_item_card--show.html.erb
+++ b/app/views/application/_item_card--show.html.erb
@@ -40,7 +40,9 @@
         <%= render(partial: "add",
                    locals: {item: item}) %>
       </div>
-      <%= render(partial: "cart-link") %>
+      <div class="show--panier">
+        <%= render(partial: "cart-link") %>
+      </div>
   </div>
   <div class="card--show__desc">
     <div>
