--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div id="main">
+<div id="main--content">
   <div class="main-title">
     <h2 class="main-title__mobile"><%= link_to "THRIFT", root_path%></h2>
     <em class="main-title__desc">Magasin d'habits de seconde-main eco-friendly.</em>
@@ -7,8 +7,9 @@
     <%= render(partial: 'mobile-header')%>
   </div>
   <h4 class="home--mission">Bienvenue sur Thriftshop!
-    Notre mission: donner une nouvelle vie à des vêtements en Suisse.
+    Notre mission: donner une nouvelle vie aux vêtements en Suisse.
   </h4>
+  <hr class="home_cards--hr">
   <div class="home_cards">
     <% @items.each do |item| %>
       <%= render(partial: 'item_card',
