--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -64,7 +64,7 @@
   display:flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #d8e3df;
+  //background-color: #d8e3df;
   font-size:2.5em;
 
   width: 100%;
