--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,11 @@ a{text-decoration: none;
   color:#000;
 }
 
+button{
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 150, 0, 0.2);
+}
+
 header{
   display:none;
 }
